# lattice

./: .gitignore  BENCH.md  README.md  SKILL.md  architecture.md  pyproject.toml
.claude-plugin/: plugin.json
bench/: README.md  __init__.py  fixture.txt  test-leverage.sh
bench/fixtures/: queries.yaml  ragas-queries.yaml
bench/lib/: __init__.py  count_tokens.py  generate_repomap.py  score_answer.py  summarize_leverage.py
bench/results/: CHANGES_AND_LOCATIONS.md  FOUR_WAY_COMPARISON.md  OODA_ANALYSIS.md  SOTA_ARCHITECTURE_DEBATE.md  SYSTEMATIC_TEST_PLAN.md  calibrate-tokenizer.json  freshness.json  ragas.json  retrieval-sanity.json  tokenizer-validation.json  tool-overhead.json
bench/runners/: calibrate-tokenizer.py  calibrate-tokenizer.ts  coderag-bench.ts  coderag-humaneval.ts  freshness.py  freshness.ts  ragas.py  ragas.ts  retrieval-sanity.py  retrieval-sanity.ts  tool-overhead.py  tool-overhead.ts  validate-tokenizer.py  validate-tokenizer.ts
lattice/: __init__.py  cli.py  daemon.py
lattice/core/: __init__.py  config.py  interfaces.py
lattice/hooks/: _client.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py
lattice/indexer/: __init__.py  graph.py  indexer.py
lattice/retrieval/: __init__.py  bm25.py  cascade.py  (+8 more)
tests/: helpers.py  test_astchunk.py  test_bm25.py  test_budget.py  test_cascade.py  test_config.py  test_continuation.py  test_experimental.py  test_freshness.py  test_graph.py  test_hipporag.py  test_pinning.py  test_router_telemetry.py  test_semantic.py  test_supersedes.py  test_symbol.py  test_tokens.py
(+50 files in other folders)
