[project]
name = "lattice"
version = "0.1.0"
description = "Token-efficient, freshness-aware hybrid retrieval and memory plugin for Claude Code. 3 MCP tools. Hooks-first. Local-only."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "mcp[cli]>=1.2.0",
    "fastembed>=0.3.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
    "tree-sitter-go",
    "sqlite-vec",
    "tiktoken",
    "pydantic>=2.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
lattice = "lattice.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
